# sdl3-win-clang

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/rules/: cmake-windows.md
.github/workflows/: windows.yml
cmake/: source-index.cmake  toolchain-clang-cl.cmake
